force-app/main/default/objects/PWChrono_Leave_Policy__c/PWChrono_Leave_Policy__c.object-meta.xml
<CustomObject>
    <label>Leave Policy</label>
    <nameField>
        <displayFormat>LP-{0000}</displayFormat>
        <label>Policy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>