force-app/main/default/objects/PWChrono_Leave_Policy__c/fields/Annual_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Annual_Allocation__c</fullName>
    <description>Override default allocation from Leave Type</description>
    <label>Annual Allocation</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>