force-app/main/default/objects/PWChrono_Leave_Policy__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>PWChrono_Department__c</referenceTo>
    <relationshipLabel>Leave Policies</relationshipLabel>
    <relationshipName>PWChrono_Leave_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>