force-app/main/default/objects/PWChrono_Leave_Policy__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation</label>
    <referenceTo>PWChrono_Designation__c</referenceTo>
    <relationshipLabel>Leave Policies</relationshipLabel>
    <relationshipName>PWChrono_Leave_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>