force-app/main/default/objects/PWChrono_Leave_Policy__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <label>Effective From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>