force-app/main/default/objects/PWChrono_Leave_Policy__c/fields/Policy_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Name__c</fullName>
    <label>Policy Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>