force-app/main/default/objects/PWChrono_Leave_Policy__c/fields/Prorate_on_Joining__c.field-meta.xml
<CustomField>
    <fullName>Prorate_on_Joining__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Prorate on Joining</label>
    <type>Checkbox</type>
</CustomField>