force-app/main/default/objects/PWChrono_Leave_Policy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Policy_Name__c</columns>
    <columns>Annual_Allocation__c</columns>
    <columns>Department__c</columns>
    <columns>Description__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Effective_To__c</columns>
    <columns>Designation__c</columns>
    <columns>Prorate_on_Joining__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>